estrutura do site

--- a/apoio.html
+++ b/apoio.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>  
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDXZ3H5ZVR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-TDXZ3H5ZVR');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Como apoiar os cursos GRÁTIS e projetos do professor José de Assis">
-  <title>Cafézinho!</title>
-  <link rel="icon" href="img/cafezinho.png">
+  <title>Cafézinho! ☕</title>
+  <link rel="icon" href="img/tuxicon.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,7 +25,7 @@
   <!-- Cabeçalho -->
   <header>
     <div class="ContainerEx Flex">
-      <div id="logo">
+      <div id="logoBanner">
         <img src="img/cafe.png" alt="xícara de café">
       </div>      
       <nav>
@@ -43,16 +52,16 @@
   <!-- Apoio -->
   <section id="apoio">
     <div class="Container">
-      <h2>Café + Conteúdo Grátis: O combo perfeito para aprender!</h2>
-      <p>Para manter a qualidade e a frequência desse conteúdo gratuito, qualquer contribuição é bem-vinda. Se você acredita no nosso trabalho e deseja apoiar, considere fazer uma doação. Juntos, podemos continuar aprendendo e crescendo!</p>
-      <h3>Pix ❖</h3>
+      <h2>Café + Conteúdo Grátis: o combo perfeito para aprender!</h2>
+      <p>Para manter a qualidade e a frequência desse conteúdo gratuito, seu apoio faz toda a diferença. Se você acredita no meu trabalho e quer contribuir, considere fazer uma doação. Juntos, seguimos aprendendo e crescendo!</p>
+      <h3>Pix❖</h3>
       <img src="img/qrcode-pix.png" alt="qrcode"> 
-      <h4>Se você preferir não escanear o QR Code, basta digitar a chave Pix abaixo:</h4>
-      <p id="pix">josedeassisfilho@gmail.com</p>     
-      <p>Em nome de: José de Assis Filho</p>     
-      <p class="destaqueApoio">E lembra:</p>
-      <p>Se não pode doar, só de curtir, compartilhar e espalhar o conhecimento já é uma baita ajuda!</p>     
-      <p class="destaqueApoio">😃 Muito obrigado pelo apoio!</p>
+      <h4>Ou, se preferir digitar:</h4>
+      <p id="pix">Chave Pix❖ josedeassisfilho@gmail.com</p>     
+      <p id="pix2">(em nome de José de Assis Filho)</p>     
+      <h4>E olha,</h4>
+      <p>Só de curtir, se inscrever no canal e compartilhar, você já está dando uma baita força.</p>     
+      <h4>😃 Valeu demais pelo apoio!</h4>
     </div>
   </section>
 
