--- a/sobre.html
+++ b/sobre.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Olá! Eu sou o professor José de Assis">
-  <title>Olá! Eu sou o professor José de Assis</title>
-  <link rel="icon" href="img/favicon.png">
+  <meta name="description" content="Aqui é o lugar para quem quer evoluir, seja você estudante, profissional de TI ou apenas alguém querendo aprender coisas novas de forma prática e aplicada.">
+  <title>Professor José de Assis</title>
+  <link rel="icon" href="img/tuxicon.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,8 +17,8 @@
   <header>
     <div class="ContainerEx Flex">
       <div>
-        <div id="logo">
-          <img src="img/professor.png" alt="professor jose de assis">
+        <div id="logoBanner">
+          <img src="img/professorjosedeassis.jpg" alt="professor jose de assis" id="prof">
         </div>
       </div>
       <nav>
@@ -48,14 +48,13 @@
       <div id="textoProf">
         <h2>Olá!</h2>
         <p>Eu sou o professor José de Assis, seu guia nas aventuras tecnológicas!</p>
-        <p>Boas-vindas, aqui o foco é compartilhar conhecimento em Tecnologia da Informação, explorando desde a base da programação, com linguagens, até o desenvolvimento completo de aplicações modernas, incluindo PWAs, sistemas web e desktop, utilizando tanto frameworks atuais quanto tecnologias tradicionais amplamente utilizadas no mercado.</p>
-        <p><span id="best">E o melhor:</span> Tem projetos práticos para você colocar a mão na massa e aprender de verdade!</p>
-          <p>Aqui é o lugar para
-          quem quer evoluir, seja você estudante, profissional de TI ou apenas alguém querendo aprender coisas novas de
-          forma prática e aplicada.</p>
+        <p>Meu objetivo é ensinar Linux com foco em servidores de rede, preparando estudantes e profissionais para o mercado de trabalho e certificações de maneira acessível e prática.</p>
+        <p><span id="best">E o melhor:</span> Tem projetos reais para você colocar a mão na massa e aprender de verdade!</p>
+        <p>✉ josedeassisfilho@gmail.com</p>
+        <br>        
         <p><span id=frase>"A vida é como andar de bicicleta. Para ter equilíbrio, você tem que se manter em
             movimento..."</span></p>
-        <p><span id="autor">(Albert Einstein)</span></p>
+        <p><span id="autor">(Albert Einstein)</span></p>        
       </div>
     </div>
   </section>
