--- a/cursos.html
+++ b/cursos.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Cursos de Linux, Linguagem C, Java e desenvolvimento WEB full stack">
-  <title>Cursos GRÁTIS - Programação e Linux</title>
-  <link rel="icon" href="img/favicon.png">
+  <meta name="description" content="Cursos gratuitos de Linux com certificado">
+  <title>Cursos GRÁTIS com certificado</title>
+  <link rel="icon" href="img/tuxicon.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,7 +16,7 @@
   <!-- Cabeçalho -->
   <header>
     <div class="ContainerEx Flex">
-      <div id="logo">
+      <div id="logoBanner">
         <img src="img/diploma.png" alt="diploma">
       </div>
       <nav>
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="index.html" id="m1">Home</a></li>
           <li><a href="sobre.html" id="m2">Sobre</a></li>
-          <li><a href="cursos.html" id="m3">Cursos</a></li>          
+          <li><a href="cursos.html" id="m3">Cursos</a></li>         
           <li><a href="tutoriais.html" id="m5">Tutoriais</a></li>
           <li><a href="apoio.html" id="m6">Apoio</a></li>
         </ul>
@@ -43,7 +43,7 @@
   <!-- Cursos -->
   <section id="cursos">
     <div class="Container">
-      <h2>Cursos <span id="projeto">GRATUITOS</span> com certificado</h2>
+      <h2>Cursos <span id="projeto">GRÁTIS</span> com certificado</h2>
       <div class="Cards Flex5">
         <div class="Card">
           <img src="img/apoio.png" alt="apoio">
@@ -52,60 +52,7 @@
             Se você já aprendeu algo aqui e quer retribuir, que tal ajudar na manutenção desse humilde QG da tecnologia?
           </p>
           <a href="apoio.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/nodejs.png" alt="nodejs">
-          <h3>Desenvolvimento profissional em JavaScript</h3>
-          <p>
-            Curso avançado usando a sintaxe moderna da linguagem e a plataforma Node.js
-          </p>
-          <a href="curso/nodejs.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/java-ee.png" alt="java">
-          <h3>Programação Java para WEB</h3>
-          <p>
-            Este curso é ideal para quem quer dar os primeiros passos no desenvolvimento WEB back-end ou full stack
-            usando a Linguagem Java.
-          </p>
-          <a href="curso/java-ee.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/java.png" alt="java">
-          <h3>Java para iniciantes</h3>
-          <p>
-            Aprenda Java de forma prática e divertida. Este curso cria uma base sólida a todos que desejam iniciar no
-            mundo Java.
-          </p>
-          <a href="curso/java.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/gitegithub.png" alt="git e github">
-          <h3>Git e GitHub</h3>
-          <p>
-            Muitas empresas exigem o Git como pré-requisito e também usam o GitHub como ferramenta para contratação.
-            Curso prático.
-          </p>
-          <a href="curso/gitegithub.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/linguagemc.png" alt="linguagem c">
-          <h3>Programação - Linguagem C</h3>
-          <p>
-            Aprenda C de forma simples e descontraída. Este curso também ensina lógica de programação, sendo recomendado
-            a iniciantes.
-          </p>
-          <a href="curso/linguagem-c.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/javascript.png" alt="javascript">
-          <h3>JavaScript - Mini projetos</h3>
-          <p>
-            Aprenda JavaScript de forma prática desenvolvendo mini projetos. Este curso também ensina lógica, sendo
-            recomendado a iniciantes.
-          </p>
-          <a href="curso/javascript.html" class="Botao">Saiba +</a>
-        </div>
+        </div>        
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
           <h3>Em produção</h3>
