--- a/index.html
+++ b/index.html
@@ -1,21 +1,164 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>  
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description"
-    content="Em construção...">
-  <title>Em construção...</title>
+    content="Turbine seu currículo com cursos gratuitos projetos e tutoriais de Linux com foco em servidores de rede.">
+  <title>Linux Tutorial</title>
   <link rel="icon" href="img/tuxicon.png">
-  
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <img src="img/tuxlinux.png" alt="tux">
-</body>
+<body id="index">
+  <!-- Cabeçalho -->
+  <header>
+    <div class="ContainerEx Flex">
+      <div id="logo">
+        <h1><span id="dev">Linux</span> Tutorial</h1>
+      </div>
+      <nav>
+        <input type="checkbox" id="check">
+        <label for="check">&#x268c;</label>
+        <ul>
+          <li><a href="index.html" id="m1">Home</a></li>
+          <li><a href="sobre.html" id="m2">Sobre</a></li>
+          <li><a href="cursos.html" id="m3">Cursos</a></li>
+          <li><a href="tutoriais.html" id="m5">Tutoriais</a></li>
+          <li><a href="apoio.html" id="m6">Apoio</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <!-- Destaque -->
+  <main id="banner">
+    <div class="ContainerEx">
+      <h2>Você faz. Você vê. Você aprende.</h1>
+        <h3>Tutoriais e cursos para você dominar o Linux de forma prática!
+      </h2>
+    </div>
+  </main>
+
+  <!-- Introdução -->
+  <section id="intro">
+    <div class="Container Flex2">
+      <div id="destaqueIntro">
+        <img src="img/teste4.jpg" alt="html5css3">
+      </div>
+      <div id="textoIntro">
+        <h2>Aprender na prática</h2>
+        <p>
+          Turbine seu currículo com cursos gratuitos e tutoriais acessíveis de Linux com foco em servidores de rede.
+        </p>
+        <div class="TopicosIntro Flex2">
+          <img src="img/server.png" alt="laptop">
+          <p>Linux Server</p>
+        </div>
+        <div class="TopicosIntro Flex2">
+          <img src="img/tux.png" alt="gear">
+          <p>Tutoriais acessíveis</p>
+        </div>
+        <div class="TopicosIntro Flex2">
+          <img src="img/certificado.png" alt="certificado">
+          <p>Cursos GRÁTIS com certificado</p>
+        </div>
+        <div class="TopicosIntro Flex2">
+          <img src="img/tools.png" alt="ferramentas">
+          <p>Desenvolva projetos reais</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Cursos -->
+  <section class="Cursos">
+    <div class="Container">
+      <h2>Cursos</h2>
+      <div class="Cards Flex5">
+        <div class="Card">
+          <img src="img/hal9000.png" alt="hal9000">
+          <h3>Em produção</h3>
+          <p>
+            Você pode acompanhar pelo YouTube todos os cursos que estão em
+            produção. Inscreva-se para não perder as novidades.
+          </p>
+          <a href="https://www.youtube.com/@ProfessorJosedeAssis?sub_confirmation=1" class="Botao" target="_blank">Saiba
+            +</a>
+        </div>
+      </div>
+      <div class="Todos">
+        <a href="cursos.html">Conheça todos >></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- YouTube -->
+  <section id="youtube">
+    <div class="Container Flex2">
+      <div id="textoYoutube">
+        <h2>Inscreva-se no canal</h2>
+        <p>Acompanhe no canal do <span class="Destacado">YouTube</span> os tutoriais e cursos que estão em produção.
+          <span class="Destacado">Inscreva-se</span> para não perder as novidades.
+        </p>
+        <a href="https://www.youtube.com/@ProfessorJosedeAssis?sub_confirmation=1" target="_blank"
+          class="Botao2">Inscrever-se</a>
+      </div>
+      <div id="imagemYoutube">
+        <img src="./img/canalyoutube.png" alt="canal youtube">
+      </div>
+    </div>
+  </section>
+
+  <!-- Tutoriais -->
+  <section class="Cursos">
+    <div class="Container">
+      <h2>Tutoriais</h2>
+      <div class="Cards Flex5">
+        <div class="Card">
+          <img src="img/hal9000.png" alt="hal9000">
+          <h3>Em produção</h3>
+          <p>
+            Você pode acompanhar pelo YouTube todos os tutoriais que estão em
+            produção. Inscreva-se para não perder as novidades.
+          </p>
+          <a href="https://www.youtube.com/@ProfessorJosedeAssis?sub_confirmation=1" class="Botao" target="_blank">Saiba
+            +</a>
+        </div>
+      </div>
+      <div class="Todos">
+        <a href="tutoriais.html">Conheça todos >></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Rodapé -->
+  <footer>
+    <div class="Container Flex4">
+      <div id="copyright">
+        <p>©<span id="copyrightYear"></span> - Professor José de Assis</p>
+      </div>
+      <div id="social">
+        <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank"><img src="img/youtube.png"
+            alt="youtube"></a>
+        <a href="https://www.linkedin.com/in/professorjosedeassis" target="_blank"><img src="img/linkedin.png"
+            alt="linkedin"></a>
+        <a href="https://www.facebook.com/professorjosedeassis" target="_blank"><img src="img/facebook.png"
+            alt="facebook"></a>
+        <a href="https://www.instagram.com/prof.joseassis/" target="_blank"><img src="img/instagram.png"
+            alt="instagram"></a>
+        <a href="https://twitter.com/joseassis" target="_blank"><img src="img/twitter.png" alt="twitter"></a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Topo -->
+  <a href="#" id="topo"><img src="img/topo.png" alt="topo do site"></a>
+
+  <script src="js/script.js"></script>
+</body>
 
 </html>
