--- a/tutoriais.html
+++ b/tutoriais.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Tutoriais de Linux, Linguagem C, Java, JavaScript e desenvolvimento WEB full stack">
-  <title>Tutoriais baseados em projetos - Programação e Linux</title>
-  <link rel="icon" href="img/favicon.png">
+  <meta name="description" content="Tutoriais acessíveis de Linux com foco em servidores de rede">
+  <title>Tutoriais acessíveis de Linux</title>
+  <link rel="icon" href="img/tuxicon.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,8 +16,8 @@
   <!-- Cabeçalho -->
   <header>
     <div class="ContainerEx Flex">
-      <div id="logo">
-        <img src="img/tutorial.png" alt="youtube tv">
+      <div id="logoBanner">
+        <img src="img/ovotux.png" alt="tux ovo">
       </div>
       <nav>
         <input type="checkbox" id="check">
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="index.html" id="m1">Home</a></li>
           <li><a href="sobre.html" id="m2">Sobre</a></li>
-          <li><a href="cursos.html" id="m3">Cursos</a></li>          
+          <li><a href="cursos.html" id="m3">Cursos</a></li>         
           <li><a href="tutoriais.html" id="m5">Tutoriais</a></li>
           <li><a href="apoio.html" id="m6">Apoio</a></li>
         </ul>
@@ -43,32 +43,16 @@
   <!-- Cursos -->
   <section id="cursos">
     <div class="Container">
-      <h2>Tutoriais baseados em projetos</h2>
+      <h2>Tutoriais <span id="projeto">acessíveis</span></h2>
       <div class="Cards Flex5">
         <div class="Card">
           <img src="img/apoio.png" alt="apoio">
           <h3>Tutoriais movidos a café!</h3>
           <p>
-            Se você acredita no nosso trabalho e deseja apoiar, considere fazer uma doação. Juntos, podemos continuar aprendendo e crescendo!
+            Se você já aprendeu algo aqui e quer retribuir, que tal ajudar na manutenção desse humilde QG da tecnologia?
           </p>
           <a href="apoio.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/electron.png" alt="electronjs">
-          <h3>Electron tutorial</h3>
-          <p>
-            Explore o framework Electron e crie uma base sólida para o desenvolvimento de projetos inovadores para
-            sistemas desktop.
-          </p>
-          <a href="tutorial/electron.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/html5css3.png" alt="html5 css3">
-          <h3>Site One Page</h3>
-          <p>
-            Tutorial completo de HTML5, CSS3 e técnicas de SEO, guiando você passo a passo na criação de um site One Page moderno e responsivo.</p>
-          <a href="tutorial/html5css3.html" class="Botao">Saiba +</a>
-        </div>
+        </div>        
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
           <h3>Em produção</h3>
