--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   <main id="banner">
     <div class="ContainerEx">
       <h2>Você faz. Você vê. Você aprende.</h1>
-        <h3>Tutoriais e cursos para você dominar o Linux de forma prática!
-      </h2>
+        <h3>Tutoriais e cursos de Linux na prática com foco em Servidores</h3>
     </div>
   </main>
 
@@ -52,7 +51,7 @@
       <div id="textoIntro">
         <h2>Aprender na prática</h2>
         <p>
-          Turbine seu currículo com cursos gratuitos e tutoriais acessíveis de Linux com foco em servidores de rede.
+          Turbine seu currículo com cursos gratuitos e tutoriais acessíveis para você dominar servidores Linux de forma prática.
         </p>
         <div class="TopicosIntro Flex2">
           <img src="img/server.png" alt="laptop">
