--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body id="index">
+
   <!-- Cabeçalho -->
   <header>
     <div class="ContainerEx Flex">
@@ -51,7 +52,8 @@
       <div id="textoIntro">
         <h2>Aprender na prática</h2>
         <p>
-          Turbine seu currículo com cursos gratuitos e tutoriais acessíveis para você dominar servidores Linux de forma prática.
+          Turbine seu currículo com cursos gratuitos e tutoriais acessíveis para você dominar servidores Linux de forma
+          prática.
         </p>
         <div class="TopicosIntro Flex2">
           <img src="img/server.png" alt="laptop">
@@ -78,6 +80,13 @@
     <div class="Container">
       <h2>Cursos</h2>
       <div class="Cards Flex5">
+        <div class="Card">
+          <img src="img/fileserver.png" alt="curso servidor de arquivos">
+          <h3>Linux File Server L1</h3>
+          <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso
+            em uma grande oportunidade!</p>
+          <a href="curso/fileserver.html" class="Botao">Saiba +</a>
+        </div>
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
           <h3>Em produção</h3>
@@ -117,6 +126,15 @@
     <div class="Container">
       <h2>Tutoriais</h2>
       <div class="Cards Flex5">
+        <div class="Card">
+          <img src="img/mysql.png" alt="mysql linux">
+          <h3>Linux Database Server</h3>
+          <p>
+            Domine o MySQL no Linux e transforme conhecimento em oportunidade! Configure um servidor leve, gratuito e
+            ideal para negócios.
+          </p>
+          <a href="tutorial/mysql.html" class="Botao">Saiba +</a>
+        </div>
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
           <h3>Em produção</h3>
