--- a/tutoriais.html
+++ b/tutoriais.html
@@ -52,6 +52,14 @@
             Se você já aprendeu algo aqui e quer retribuir, que tal ajudar na manutenção desse humilde QG da tecnologia?
           </p>
           <a href="apoio.html" class="Botao">Saiba +</a>
+        </div>
+        <div class="Card">
+          <img src="img/mysql.png" alt="mysql linux">
+          <h3>Linux Database Server</h3>
+          <p>
+            Domine o MySQL no Linux e transforme conhecimento em oportunidade! Configure um servidor leve, gratuito e ideal para negócios.
+          </p>
+          <a href="tutorial/mysql.html" class="Botao">Saiba +</a>
         </div>        
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
