--- a/tutorial/mysql.html
+++ b/tutorial/mysql.html
@@ -7,7 +7,7 @@
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Linux Database - Servidor Linux - banco de dados MySQL">
-  <title>Tutorial Linux Database Server</title>
+  <title>Linux Database Server</title>
   <link rel="icon" href="../img/favicon.png">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -17,7 +17,7 @@
   <header>
     <div class="ContainerEx Flex">
       <div id="logo">
-        <img src="../img/tutorial.png" alt="tutorial">
+        <img src="../img/ovotux.png" alt="tutorial">
       </div>
       <nav>
         <input type="checkbox" id="check">
@@ -45,7 +45,7 @@
     <div class="Container">
       <h2>Linux MySQL Database Server</h2>
       <p>
-        Este tutorial ensina a instalar, configurar e gerenciar o banco de dados MySQL no Linux. O principal objetivo é implementar de forma prática um servidor de banco de dados para uso na rede local em sistemas comerciais de lojas físicas, supermercados, escritórios, oficinas etc. Isto pode trazer uma oportunidade de negócio, pois além de gratuito o servidor de banco de dados baseado no Linux não requer um hardware potente atendendo a clientes de pequeno ou médio porte. Este tutorial é ideal para estudantes da área de TI, DevOps e desenvolvedores back-end ou Full stack.
+        Este tutorial vai te guiar na instalação, configuração e gerenciamento do MySQL no Linux de forma prática e direta. O objetivo é montar um servidor de banco de dados eficiente para uso em redes locais, ideal para sistemas comerciais como lojas, supermercados, escritórios e oficinas. Além de ser uma solução gratuita, o MySQL no Linux roda bem até em hardware modesto, tornando-se uma excelente opção para atender clientes de pequeno e médio porte. Se você é estudante de TI, DevOps ou desenvolvedor back-end/full stack, este material foi feito para você!
       </p>
       <h3>Pré-requisitos:</h3>
       <p>
