--- a/curso/fileserver.html
+++ b/curso/fileserver.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>  
+<head> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description"
-    content="Aprenda Linguagem C de forma simples e descontraída. Este curso também ensina Lógica de Programação e é recomendado para iniciantes.">
-  <title>Curso de programação com a Linguagem C</title>
+  <meta name="description" content="Curso Linux File Server (Samba Server) Debian">
+  <title>Curso Linux File Server Level 1</title>
   <link rel="icon" href="../img/favicon.png">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -26,8 +25,7 @@
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="../sobre.html">Sobre</a></li>
-          <li><a href="../cursos.html">Cursos</a></li>
-          <li><a href="../projetos.html">Projetos</a></li>
+          <li><a href="../cursos.html">Cursos</a></li>          
           <li><a href="../tutoriais.html">Tutoriais</a></li>
           <li><a href="../apoio.html">Apoio</a></li>
         </ul>
@@ -45,24 +43,28 @@
   <!-- Conteúdo -->
   <section id="conteudo">
     <div class="Container">
-      <h2>Programação com a Linguagem C</h2>
-      <p>Aprenda Linguagem C de forma simples e descontraída. Este curso também ensina Lógica de Programação e é
-        recomendado para iniciantes.</p>
+      <h2>Linux File Server Level 1</h2>
+      <p>
+        Descubra uma oportunidade de negócio! Muitas empresas precisam de soluções eficientes para compartilhar arquivos na rede local. Neste curso prático, você aprenderá passo a passo como instalar e configurar um Servidor de Arquivos Linux para atender redes de pequeno e médio porte. Tudo isso baseado em um projeto real para que você aprenda com cenários do dia a dia.
+      </p>
       <h3>Pré-requisitos:</h3>
-      <p>Não é necessário nenhum pré-requisito.</p>
+      <p>
+        Desejável conhecimentos básicos em Servidores Linux. Caso não possua este conhecimento clique no link abaixo:
+      </p>
+      <a href="linux.html">🔗 Curso Linux Server</a>
       <h3>Apresentação:</h3>
       <div class="Video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/COgylca8qYw" title="YouTube video player"
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wGvCOMTVXWY" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <h3>▶️ Playlist:</h3>
-      <a href="https://www.youtube.com/playlist?list=PLbEOwbQR9lqxHno2S-IiG9-lePyRNOO_E" target="_blank">Iniciar
+      <a href="https://www.youtube.com/playlist?list=PLbEOwbQR9lqx8dx4_RqSl97jTJoj7x_q-" target="_blank">Iniciar
         curso</a>
       <h3>🎓 Certificado deste curso:</h3>
-      <a href="https://forms.gle/N3LxBdv4uSF8rjSf8" target="_blank">Iniciar teste</a>
+      <a href="https://forms.gle/L5kwUphEanyYgYip9" target="_blank">Iniciar teste</a>
       <h3>Material de apoio:</h3>
-      <a href="https://github.com/professorjosedeassis/Linguagem-C" target="_blank"><img src="../img/pasta.png"
+      <a href="https://github.com/professorjosedeassis/file-server" target="_blank"><img src="../img/pasta.png"
           alt="github"></a>
     </div>
   </section>
