--- a/cursos.html
+++ b/cursos.html
@@ -52,7 +52,13 @@
             Se você já aprendeu algo aqui e quer retribuir, que tal ajudar na manutenção desse humilde QG da tecnologia?
           </p>
           <a href="apoio.html" class="Botao">Saiba +</a>
-        </div>        
+        </div>
+        <div class="Card">
+          <img src="img/fileserver.png" alt="curso servidor de arquivos">
+          <h3>Linux File Server L1</h3>
+          <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso em uma grande oportunidade!</p>
+          <a href="curso/fileserver.html" class="Botao">Saiba +</a>
+        </div>       
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
           <h3>Em produção</h3>
