--- a/curso/linux.html
+++ b/curso/linux.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>  
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Curso Linux Server Debian - Instalação, configuração, segurança e principais serviços.">
+  <meta name="description"
+    content="Curso Linux Server Debian - Instalação, configuração, segurança e principais serviços.">
   <title>Curso Linux Server - Primeiros passos com Servidor Linux</title>
   <link rel="icon" href="../img/favicon.png">
   <link rel="stylesheet" href="../css/style.css">
@@ -25,7 +26,7 @@
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="../sobre.html">Sobre</a></li>
-          <li><a href="../cursos.html">Cursos</a></li>          
+          <li><a href="../cursos.html">Cursos</a></li>
           <li><a href="../tutoriais.html">Tutoriais</a></li>
           <li><a href="../apoio.html">Apoio</a></li>
         </ul>
@@ -45,25 +46,30 @@
     <div class="Container">
       <h2>Linux Server - Primeiros passos com Servidor Linux</h2>
       <p>
-        Este curso é ideal para estudantes e profissionais de TI que desejam iniciar em Linux com foco no mercado de trabalho (Administração de Servidores Linux e CLOUD). Este curso forma uma base sólida para quem deseja estudar para certificação Linux e também atende a DevOps e desenvolvedores back-end ou full stack. Durante o curso você aprenderá passo a passo na prática a instalar, configurar e administrar um Servidor Linux.
+        Este curso é ideal para estudantes e profissionais de TI que querem começar no Linux com foco no mercado de
+        trabalho, incluindo Administração de Servidores e Cloud. Com uma base sólida, ele prepara você para
+        certificações Linux e atende também a DevOps e desenvolvedores back-end/full stack. Ao longo das aulas, você
+        aprenderá na prática, passo a passo, a instalar, configurar e administrar um Servidor Linux.
       </p>
       <h3>Este curso é dividido em 4 módulos:</h3>
       <ul>
         <li>
-          <h4>Módulo 1 - Instalação e configuração</h4>
-          <p>Neste módulo você irá aprender a instalar e configurar o Servidor Linux, planejando a instalação de acordo com os serviços e particionando os discos com LVM de forma a obter o máximo de desempenho e segurança.</p>
+          <h4>✅ Módulo 1 - Instalação e configuração</h4>
+          <p>Aprenda a instalar e configurar um Servidor Linux de forma estratégica, planejando a instalação,
+            particionando discos com LVM e garantindo desempenho e segurança.</p>
         </li>
         <li>
-          <h4>Módulo 2 - Firewall</h4>
-          <p>Neste módulo você irá aprender a configurar o firewall do Linux usando iptables.</p>
+          <h4>🔥 Módulo 2 - Firewall</h4>
+          <p>Domine a configuração do firewall no Linux com iptables para proteger seu servidor contra ameaças e
+            controlar o tráfego de rede.</p>
         </li>
         <li>
-          <h4>Módulo 3 - Servidor WEB</h4>
-          <p>Neste módulo o objetivo é montar um servidor WEB dinâmico.</p>
+          <h4>🌐 Módulo 3 - Servidor WEB</h4>
+          <p>Crie um servidor WEB dinâmico e aprenda a configurar os principais serviços para aplicações modernas.</p>
         </li>
         <li>
-          <h4>Módulo 4 - Administração do servidor</h4>
-          <p>Neste módulo você irá aprender a administrar e gerenciar um servidor Linux.</p>
+          <h4>🔧 Módulo 4 - Administração do servidor</h4>
+          <p>Gerencie e administre seu Servidor Linux com eficiência, garantindo estabilidade, segurança e alto desempenho.</p>
         </li>
       </ul>
       <h3>Pré-requisitos:</h3>
@@ -94,7 +100,7 @@
         <p>©<span id="copyrightYear"></span> - Professor José de Assis</p>
       </div>
       <div id="social">
-        <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank"><img src="../img/youtube.png"
+        <a href="https://www.youtube.com/@ProfessorJosedeAssis" target="_blank"><img src="../img/youtube.png"
             alt="youtube"></a>
         <a href="https://www.linkedin.com/in/professorjosedeassis" target="_blank"><img src="../img/linkedin.png"
             alt="linkedin"></a>
