--- a/tutoriais.html
+++ b/tutoriais.html
@@ -55,12 +55,20 @@
         </div>
         <div class="Card">
           <img src="img/mysql.png" alt="mysql linux">
-          <h3>Linux Database Server</h3>
+          <h3>Linux MySQL Server</h3>
           <p>
             Domine o MySQL no Linux e transforme conhecimento em oportunidade! Configure um servidor leve, gratuito e ideal para negócios.
           </p>
           <a href="tutorial/mysql.html" class="Botao">Saiba +</a>
-        </div>        
+        </div>
+        <div class="Card">
+          <img src="img/tomcat.png" alt="linux tomcat">
+          <h3>Linux Tomcat Server</h3>
+          <p>
+            Aprenda a configurar um servidor WEB Linux com Tomcat e hospedar aplicações Java. Ideal para DevOps, estudantes de TI e desenvolvedores!
+          </p>
+          <a href="tutorial/tomcat.html" class="Botao">Saiba +</a>
+        </div>      
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
           <h3>Em produção</h3>
@@ -82,7 +90,7 @@
         <p>©<span id="copyrightYear"></span> - Professor José de Assis</p>
       </div>
       <div id="social">
-        <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank"><img src="img/youtube.png"
+        <a href="https://www.youtube.com/@ProfessorJosedeAssis" target="_blank"><img src="img/youtube.png"
             alt="youtube"></a>
         <a href="https://www.linkedin.com/in/professorjosedeassis" target="_blank"><img src="img/linkedin.png"
             alt="linkedin"></a>
