--- a/tutorial/tomcat.html
+++ b/tutorial/tomcat.html
@@ -45,9 +45,7 @@
     <div class="Container">
       <h2>Linux Tomcat Server</h2>
       <p>
-        Neste tutorial você irá aprender a implementar um servidor WEB Java com Tomcat no Linux. O Apache Tomcat é usado
-        para hospedagem de aplicativos que usam a linguagem Java no back-end. Este tutorial é ideal para estudantes da
-        área de TI, DevOps e desenvolvedores WEB back-end ou full stack.
+        Aprenda a configurar um servidor WEB Java no Linux com Apache Tomcat! Essencial para hospedar aplicações Java no back-end, este tutorial é perfeito para estudantes de TI, DevOps e desenvolvedores Java back-end ou full stack.
       </p>
       <h3>Pré-requisitos:</h3>
       <p>
@@ -76,7 +74,7 @@
         <p>©<span id="copyrightYear"></span> - Professor José de Assis</p>
       </div>
       <div id="social">
-        <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank"><img src="../img/youtube.png"
+        <a href="https://www.youtube.com/@ProfessorJosedeAssis" target="_blank"><img src="../img/youtube.png"
             alt="youtube"></a>
         <a href="https://www.linkedin.com/in/professorjosedeassis" target="_blank"><img src="../img/linkedin.png"
             alt="linkedin"></a>
