--- a/cursos.html
+++ b/cursos.html
@@ -54,6 +54,14 @@
           <a href="apoio.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
+          <img src="img/linux.png" alt="curso de linux">
+          <h3>Linux Server</h3>
+          <p>
+            Domine o Linux para o mercado! Aprenda na prática a instalar, configurar e administrar servidores. Sua jornada começa agora!
+          </p>
+          <a href="curso/linux.html" class="Botao">Saiba +</a>
+        </div>
+        <div class="Card">
           <img src="img/fileserver.png" alt="curso servidor de arquivos">
           <h3>Linux File Server L1</h3>
           <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso em uma grande oportunidade!</p>
@@ -80,7 +88,7 @@
         <p>©<span id="copyrightYear"></span> - Professor José de Assis</p>
       </div>
       <div id="social">
-        <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank"><img src="img/youtube.png"
+        <a href="https://www.youtube.com/@ProfessorJosedeAssis" target="_blank"><img src="img/youtube.png"
             alt="youtube"></a>
         <a href="https://www.linkedin.com/in/professorjosedeassis" target="_blank"><img src="img/linkedin.png"
             alt="linkedin"></a>
