--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
       <h2>Cursos</h2>
       <div class="Cards Flex5">
         <div class="Card">
+          <img src="img/linux.png" alt="curso de linux">
+          <h3>Linux Server</h3>
+          <p>
+            Domine o Linux para o mercado! Aprenda na prática a instalar, configurar e administrar servidores. Sua jornada começa agora!
+          </p>
+          <a href="curso/linux.html" class="Botao">Saiba +</a>
+        </div>
+        <div class="Card">
           <img src="img/fileserver.png" alt="curso servidor de arquivos">
           <h3>Linux File Server L1</h3>
           <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso
@@ -128,12 +136,20 @@
       <div class="Cards Flex5">
         <div class="Card">
           <img src="img/mysql.png" alt="mysql linux">
-          <h3>Linux Database Server</h3>
+          <h3>Linux MySQL Server</h3>
           <p>
             Domine o MySQL no Linux e transforme conhecimento em oportunidade! Configure um servidor leve, gratuito e
             ideal para negócios.
           </p>
           <a href="tutorial/mysql.html" class="Botao">Saiba +</a>
+        </div>
+        <div class="Card">
+          <img src="img/tomcat.png" alt="linux tomcat">
+          <h3>Linux Tomcat Server</h3>
+          <p>
+            Aprenda a configurar um servidor WEB Linux com Tomcat e hospedar aplicações Java. Ideal para DevOps, estudantes de TI e desenvolvedores!
+          </p>
+          <a href="tutorial/tomcat.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
@@ -159,7 +175,7 @@
         <p>©<span id="copyrightYear"></span> - Professor José de Assis</p>
       </div>
       <div id="social">
-        <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank"><img src="img/youtube.png"
+        <a href="https://www.youtube.com/@ProfessorJosedeAssis" target="_blank"><img src="img/youtube.png"
             alt="youtube"></a>
         <a href="https://www.linkedin.com/in/professorjosedeassis" target="_blank"><img src="img/linkedin.png"
             alt="linkedin"></a>
