--- a/sobre.html
+++ b/sobre.html
@@ -66,7 +66,7 @@
         <p>©<span id="copyrightYear"></span> - Professor José de Assis</p>
       </div>
       <div id="social">
-        <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank"><img src="img/youtube.png"
+        <a href="https://www.youtube.com/@ProfessorJosedeAssis" target="_blank"><img src="img/youtube.png"
             alt="youtube"></a>
         <a href="https://www.linkedin.com/in/professorjosedeassis" target="_blank"><img src="img/linkedin.png"
             alt="linkedin"></a>
