--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <main id="banner">
     <div class="ContainerEx">
       <h2>Você faz. Você vê. Você aprende.</h1>
-        <h3>Tutoriais e cursos de Linux na prática com foco em Servidores</h3>
+        <h3>Domine Linux para servidores e impulsione sua carreira!</h3>
     </div>
   </main>
 
