--- a/tutorial/tomcat.html
+++ b/tutorial/tomcat.html
@@ -16,7 +16,7 @@
   <!-- Cabeçalho -->
   <header>
     <div class="ContainerEx Flex">
-      <div id="logo">
+      <div id="logoBanner">
         <img src="../img/tutorial.png" alt="tutorial">
       </div>
       <nav>
