--- a/curso/fileserver.html
+++ b/curso/fileserver.html
@@ -16,7 +16,7 @@
   <!-- Cabeçalho -->
   <header>
     <div class="ContainerEx Flex">
-      <div id="logo">
+      <div id="logoBanner">
         <img src="../img/diploma.png" alt="diploma">
       </div>
       <nav>
