--- a/apoio.html
+++ b/apoio.html
@@ -16,7 +16,7 @@
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Como apoiar os cursos GRÁTIS e projetos do professor José de Assis">
-  <title>Cafézinho! ☕</title>
+  <title>Café! ☕</title>
   <link rel="icon" href="img/tuxicon.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -36,7 +36,7 @@
           <li><a href="sobre.html" id="m2">Sobre</a></li>
           <li><a href="cursos.html" id="m3">Cursos</a></li>          
           <li><a href="tutoriais.html" id="m5">Tutoriais</a></li>
-          <li><a href="apoio.html" id="m6">Apoio</a></li>
+          <li><a href="apoio.html" id="m6">Café</a></li>
         </ul>
       </nav>
     </div>
@@ -52,7 +52,7 @@
   <!-- Apoio -->
   <section id="apoio">
     <div class="Container">
-      <h2>Café + Conteúdo Grátis: o combo perfeito para aprender!</h2>
+      <h2>☕ Café + Conteúdo Grátis: o combo perfeito para aprender!</h2>
       <p>Para manter a qualidade e a frequência desse conteúdo gratuito, seu apoio faz toda a diferença. Se você acredita no meu trabalho e quer contribuir, considere fazer uma doação. Juntos, seguimos aprendendo e crescendo!</p>
       <h3>Pix❖</h3>
       <img src="img/qrcode-pix.png" alt="qrcode"> 
