--- a/curso/fileserver.html
+++ b/curso/fileserver.html
@@ -27,7 +27,7 @@
           <li><a href="../sobre.html">Sobre</a></li>
           <li><a href="../cursos.html">Cursos</a></li>          
           <li><a href="../tutoriais.html">Tutoriais</a></li>
-          <li><a href="../apoio.html">Apoio</a></li>
+          <li><a href="../apoio.html">Café</a></li>
         </ul>
       </nav>
     </div>
