--- a/tutorial/tomcat.html
+++ b/tutorial/tomcat.html
@@ -17,7 +17,7 @@
   <header>
     <div class="ContainerEx Flex">
       <div id="logoBanner">
-        <img src="../img/tutorial.png" alt="tutorial">
+        <img src="../img/ovotux.png" alt="tutorial">
       </div>
       <nav>
         <input type="checkbox" id="check">
@@ -27,7 +27,7 @@
           <li><a href="../sobre.html">Sobre</a></li>
           <li><a href="../cursos.html">Cursos</a></li>         
           <li><a href="../tutoriais.html">Tutoriais</a></li>
-          <li><a href="../apoio.html">Apoio</a></li>
+          <li><a href="../apoio.html">Café</a></li>
         </ul>
       </nav>
     </div>
