--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="sobre.html" id="m2">Sobre</a></li>
           <li><a href="cursos.html" id="m3">Cursos</a></li>
           <li><a href="tutoriais.html" id="m5">Tutoriais</a></li>
-          <li><a href="apoio.html" id="m6">Apoio</a></li>
+          <li><a href="apoio.html" id="m6">Café</a></li>
         </ul>
       </nav>
     </div>
