--- a/apoio.html
+++ b/apoio.html
@@ -45,7 +45,7 @@
   <!-- Destaque Apoio -->
   <main class="Banner2">
     <div class="Container">
-      <h1>APOIO</h1>
+      <h1>Café</h1>
     </div>
   </main>
 
