--- a/curso/linux-security.html
+++ b/curso/linux-security.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Curso Linux File Server (Samba Server) Debian">
-  <title>Curso Linux File Server Level 1</title>
+  <meta name="description" content="Curso de segurança Linux vaseado no Debian para servidor de rede local. Projeto real">
+  <title>Curso Linux Security Level 1</title>
   <link rel="icon" href="../img/favicon.png">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -43,9 +43,9 @@
   <!-- Conteúdo -->
   <section id="conteudo">
     <div class="Container">
-      <h2>Linux File Server Level 1</h2>
+      <h2>Linux Security Level 1</h2>
       <p>
-        Descubra uma oportunidade de negócio! Muitas empresas precisam de soluções eficientes para compartilhar arquivos na rede local. Neste curso prático, você aprenderá passo a passo como instalar e configurar um Servidor de Arquivos Linux para atender redes de pequeno e médio porte. Tudo isso baseado em um projeto real para que você aprenda com cenários do dia a dia.
+        Neste curso, você aprenderá, de forma prática e passo a passo, a instalar e configurar um servidor Linux baseado na distribuição Debian para compartilhar a internet com segurança em sua rede. Utilizaremos ferramentas poderosas, como o dnsmasq e nftables, para criar um ambiente de rede personalizado e protegido. Este curso é ideal tanto para iniciantes quanto para administradores de rede que desejam aprimorar seus conhecimentos em segurança no Linux. Além disso, ele oferece uma excelente oportunidade de negócio, pois muitas empresas de pequeno e médio porte precisam de soluções eficazes para compartilhamento de internet, segurança e bloqueio de sites e redes sociais.
       </p>
       <h3>Pré-requisitos:</h3>
       <p>
@@ -54,16 +54,18 @@
       <a href="linux.html">🔗 Curso Linux Server</a>
       <h3>Apresentação:</h3>
       <div class="Video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/wGvCOMTVXWY" title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Qu5HuKWUhNI?si=X5fGE0CGeU1TqjiR" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       <h3>▶️ Playlist:</h3>
-      <a href="https://www.youtube.com/playlist?list=PLbEOwbQR9lqx8dx4_RqSl97jTJoj7x_q-" target="_blank">Iniciar
-        curso</a>      
+      <a href="https://youtube.com/playlist?list=PLbEOwbQR9lqwOac4ACCuy97JjycU8ORmi&si=qgwNqAUFE9Cc93Cf" target="_blank">Iniciar
+        curso</a>
+      <h3>🎓 Certificado deste curso:</h3>
+      <a href="https://forms.gle/L5kwUphEanyYgYip9" target="_blank">Iniciar teste</a>
+      <!--
       <h3>Material de apoio:</h3>
       <a href="https://github.com/professorjosedeassis/file-server" target="_blank"><img src="../img/pasta.png"
           alt="github"></a>
+      -->
     </div>
   </section>
 
