--- a/index.html
+++ b/index.html
@@ -82,18 +82,12 @@
       <div class="Cards Flex5">
         <div class="Card">
           <img src="img/linux.png" alt="curso de linux">
-          <h3>Linux Server</h3>
+          <h3>Curso Linux Server</h3>
           <p>
-            Domine o Linux para o mercado! Aprenda na prática a instalar, configurar e administrar servidores. Sua jornada começa agora!
+            Domine o Linux para o mercado! Aprenda na prática a instalar, configurar e administrar servidores. Sua
+            jornada começa agora!
           </p>
           <a href="curso/linux.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/fileserver.png" alt="curso servidor de arquivos">
-          <h3>Linux File Server L1</h3>
-          <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso
-            em uma grande oportunidade!</p>
-          <a href="curso/fileserver.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
@@ -135,6 +129,13 @@
       <h2>Tutoriais</h2>
       <div class="Cards Flex5">
         <div class="Card">
+          <img src="img/fileserver.png" alt="curso servidor de arquivos">
+          <h3>Linux File Server</h3>
+          <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso
+            em uma grande oportunidade!</p>
+          <a href="tutorial/fileserver.html" class="Botao">Saiba +</a>
+        </div>
+        <div class="Card">
           <img src="img/mysql.png" alt="mysql linux">
           <h3>Linux MySQL Server</h3>
           <p>
@@ -147,19 +148,10 @@
           <img src="img/tomcat.png" alt="linux tomcat">
           <h3>Linux Tomcat Server</h3>
           <p>
-            Aprenda a configurar um servidor WEB Linux com Tomcat e hospedar aplicações Java. Ideal para DevOps, estudantes de TI e desenvolvedores!
+            Aprenda a configurar um servidor WEB Linux com Tomcat e hospedar aplicações Java. Ideal para DevOps,
+            estudantes de TI e desenvolvedores!
           </p>
           <a href="tutorial/tomcat.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/hal9000.png" alt="hal9000">
-          <h3>Em produção</h3>
-          <p>
-            Você pode acompanhar pelo YouTube todos os tutoriais que estão em
-            produção. Inscreva-se para não perder as novidades.
-          </p>
-          <a href="https://www.youtube.com/@ProfessorJosedeAssis?sub_confirmation=1" class="Botao" target="_blank">Saiba
-            +</a>
         </div>
       </div>
       <div class="Todos">
