--- a/tutoriais.html
+++ b/tutoriais.html
@@ -54,6 +54,12 @@
           <a href="apoio.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
+          <img src="img/fileserver.png" alt="curso servidor de arquivos">
+          <h3>Linux File Server</h3>
+          <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso em uma grande oportunidade!</p>
+          <a href="tutorial/fileserver.html" class="Botao">Saiba +</a>
+        </div>  
+        <div class="Card">
           <img src="img/mysql.png" alt="mysql linux">
           <h3>Linux MySQL Server</h3>
           <p>
