--- a/tutorial/fileserver.html
+++ b/tutorial/fileserver.html
@@ -17,7 +17,7 @@
   <header>
     <div class="ContainerEx Flex">
       <div id="logoBanner">
-        <img src="../img/diploma.png" alt="diploma">
+        <img src="../img/ovotux.png" alt="diploma">
       </div>
       <nav>
         <input type="checkbox" id="check">
@@ -36,7 +36,7 @@
   <!-- Destaque Cursos -->
   <main class="Banner2">
     <div class="Container">
-      <h1>CURSO</h1>
+      <h1>TUTORIAL</h1>
     </div>
   </main>
 
@@ -45,7 +45,7 @@
     <div class="Container">
       <h2>Linux File Server Level 1</h2>
       <p>
-        Descubra uma oportunidade de negócio! Muitas empresas precisam de soluções eficientes para compartilhar arquivos na rede local. Neste curso prático, você aprenderá passo a passo como instalar e configurar um Servidor de Arquivos Linux para atender redes de pequeno e médio porte. Tudo isso baseado em um projeto real para que você aprenda com cenários do dia a dia.
+        Descubra uma oportunidade de negócio! Muitas empresas precisam de soluções eficientes para compartilhar arquivos na rede local. Neste tutorial prático, você aprenderá passo a passo como instalar e configurar um Servidor de Arquivos Linux para atender redes de pequeno e médio porte. Tudo isso baseado em um projeto real para que você aprenda com cenários do dia a dia.
       </p>
       <h3>Pré-requisitos:</h3>
       <p>
@@ -59,8 +59,7 @@
           allowfullscreen></iframe>
       </div>
       <h3>▶️ Playlist:</h3>
-      <a href="https://www.youtube.com/playlist?list=PLbEOwbQR9lqx8dx4_RqSl97jTJoj7x_q-" target="_blank">Iniciar
-        curso</a>      
+      <a href="https://www.youtube.com/playlist?list=PLbEOwbQR9lqx8dx4_RqSl97jTJoj7x_q-" target="_blank">Iniciar tutorial</a>      
       <h3>Material de apoio:</h3>
       <a href="https://github.com/professorjosedeassis/file-server" target="_blank"><img src="../img/pasta.png"
           alt="github"></a>
