curso linux security

--- a/curso/linux-security.html
+++ b/curso/linux-security.html
@@ -60,12 +60,7 @@
       <a href="https://youtube.com/playlist?list=PLbEOwbQR9lqwOac4ACCuy97JjycU8ORmi&si=qgwNqAUFE9Cc93Cf" target="_blank">Iniciar
         curso</a>
       <h3>🎓 Certificado deste curso:</h3>
-      <a href="https://forms.gle/L5kwUphEanyYgYip9" target="_blank">Iniciar teste</a>
-      <!--
-      <h3>Material de apoio:</h3>
-      <a href="https://github.com/professorjosedeassis/file-server" target="_blank"><img src="../img/pasta.png"
-          alt="github"></a>
-      -->
+      <a href="https://forms.gle/BXuQsTQz85jTe8fs8" target="_blank">Iniciar teste</a>      
     </div>
   </section>
 
