--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section class="Cursos">
     <div class="Container">
       <h2>Cursos</h2>
-      <div class="Cards Flex5">
+      <div class="Cards Flex5">        
         <div class="Card">
           <img src="img/linux.png" alt="curso de linux">
           <h3>Curso Linux Server</h3>
@@ -88,6 +88,14 @@
             jornada começa agora!
           </p>
           <a href="curso/linux.html" class="Botao">Saiba +</a>
+        </div>
+        <div class="Card">
+          <img src="img/linux security.png" alt="curso de ssegurança linux">
+          <h3>Curso Linux Security</h3>
+          <p>
+            Aprenda do zero a proteger sua rede local no Linux! Compartilhe a internet com dnsmasq e firewall, na prática!
+          </p>
+          <a href="curso/linux-security.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
