--- a/cursos.html
+++ b/cursos.html
@@ -54,6 +54,14 @@
           <a href="apoio.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
+          <img src="img/linux security.png" alt="curso de ssegurança linux">
+          <h3>Curso Linux Security</h3>
+          <p>
+            Aprenda do zero a proteger sua rede local no Linux! Compartilhe a internet com dnsmasq e firewall, na prática!
+          </p>
+          <a href="curso/linux-security.html" class="Botao">Saiba +</a>
+        </div>
+        <div class="Card">
           <img src="img/linux.png" alt="curso de linux">
           <h3>Linux Server</h3>
           <p>
