--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
     <div class="ContainerEx Flex">
       <div>
         <div id="logoBanner">
-          <img src="img/professorjosedeassis.jpg" alt="professor jose de assis" id="prof">
+          <img src="img/professor-jose-de-assis.png" alt="professor jose de assis" id="prof">
         </div>
       </div>
       <nav>
