--- a/cursos.html
+++ b/cursos.html
@@ -54,6 +54,14 @@
           <a href="apoio.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
+          <img src="img/debianserver.png" alt="debian server">
+          <h3>Instalando o Debian no modo Servidor</h3>
+          <p>
+            Assista ao vídeo e aprenda o passo a passo para instalar o Debian no perfil de servidor minimalista!
+          </p>
+          <a href="https://youtu.be/DgzK6Nx_GyQ?si=6YKWQidM4LFqZG7x" class="Botao" target="_blank">Assistir</a>
+        </div>
+        <div class="Card">
           <img src="img/linux security.png" alt="curso de ssegurança linux">
           <h3>Curso Linux Security</h3>
           <p>
