--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
   <section class="Cursos">
     <div class="Container">
       <h2>Cursos</h2>
-      <div class="Cards Flex5">        
+      <div class="Cards Flex5">
+        <div class="Card">
+          <img src="img/debianserver.png" alt="debian server">
+          <h3>Instalando o Debian no modo Servidor</h3>
+          <p>
+            Assista ao vídeo e aprenda o passo a passo para instalar o Debian no perfil de servidor minimalista!
+          </p>
+          <a href="https://youtu.be/DgzK6Nx_GyQ?si=6YKWQidM4LFqZG7x" class="Botao" target="_blank">Assistir</a>
+        </div>
         <div class="Card">
           <img src="img/linux.png" alt="curso de linux">
           <h3>Curso Linux Server</h3>
@@ -93,19 +101,10 @@
           <img src="img/linux security.png" alt="curso de ssegurança linux">
           <h3>Curso Linux Security</h3>
           <p>
-            Aprenda do zero a proteger sua rede local no Linux! Compartilhe a internet com dnsmasq e firewall, na prática!
+            Aprenda do zero a proteger sua rede local no Linux! Compartilhe a internet com dnsmasq e firewall, na
+            prática!
           </p>
           <a href="curso/linux-security.html" class="Botao">Saiba +</a>
-        </div>
-        <div class="Card">
-          <img src="img/hal9000.png" alt="hal9000">
-          <h3>Em produção</h3>
-          <p>
-            Você pode acompanhar pelo YouTube todos os cursos que estão em
-            produção. Inscreva-se para não perder as novidades.
-          </p>
-          <a href="https://www.youtube.com/@ProfessorJosedeAssis?sub_confirmation=1" class="Botao" target="_blank">Saiba
-            +</a>
         </div>
       </div>
       <div class="Todos">
