--- a/tutoriais.html
+++ b/tutoriais.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>  
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,
    initial-scale=1.0">
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="index.html" id="m1">Home</a></li>
           <li><a href="sobre.html" id="m2">Sobre</a></li>
-          <li><a href="cursos.html" id="m3">Cursos</a></li>         
+          <li><a href="cursos.html" id="m3">Cursos</a></li>
           <li><a href="tutoriais.html" id="m5">Tutoriais</a></li>
           <li><a href="apoio.html" id="m6">Café</a></li>
         </ul>
@@ -54,16 +54,26 @@
           <a href="apoio.html" class="Botao">Saiba +</a>
         </div>
         <div class="Card">
+          <img src="img/debianserver.png" alt="debian server">
+          <h3>Instalando o Debian no modo Servidor</h3>
+          <p>
+            Assista ao vídeo e aprenda o passo a passo para instalar o Debian no perfil de servidor minimalista!
+          </p>
+          <a href="https://youtu.be/DgzK6Nx_GyQ?si=6YKWQidM4LFqZG7x" class="Botao" target="_blank">Assistir</a>
+        </div>
+        <div class="Card">
           <img src="img/fileserver.png" alt="curso servidor de arquivos">
           <h3>Linux File Server</h3>
-          <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso em uma grande oportunidade!</p>
+          <p>Aprenda a instalar um Servidor de Arquivos Linux para empresas de pequeno e médio porte e transforme isso
+            em uma grande oportunidade!</p>
           <a href="tutorial/fileserver.html" class="Botao">Saiba +</a>
-        </div>  
+        </div>
         <div class="Card">
           <img src="img/mysql.png" alt="mysql linux">
           <h3>Linux MySQL Server</h3>
           <p>
-            Domine o MySQL no Linux e transforme conhecimento em oportunidade! Configure um servidor leve, gratuito e ideal para negócios.
+            Domine o MySQL no Linux e transforme conhecimento em oportunidade! Configure um servidor leve, gratuito e
+            ideal para negócios.
           </p>
           <a href="tutorial/mysql.html" class="Botao">Saiba +</a>
         </div>
@@ -71,10 +81,11 @@
           <img src="img/tomcat.png" alt="linux tomcat">
           <h3>Linux Tomcat Server</h3>
           <p>
-            Aprenda a configurar um servidor WEB Linux com Tomcat e hospedar aplicações Java. Ideal para DevOps, estudantes de TI e desenvolvedores!
+            Aprenda a configurar um servidor WEB Linux com Tomcat e hospedar aplicações Java. Ideal para DevOps,
+            estudantes de TI e desenvolvedores!
           </p>
           <a href="tutorial/tomcat.html" class="Botao">Saiba +</a>
-        </div>      
+        </div>
         <div class="Card">
           <img src="img/hal9000.png" alt="hal9000">
           <h3>Em produção</h3>
