card linux security

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
           <img src="img/linux security.png" alt="curso de ssegurança linux">
           <h3>Curso Linux Security</h3>
           <p>
-            Aprenda do zero a proteger sua rede local no Linux! Compartilhe a internet com dnsmasq e firewall, na
-            prática!
+            Aprenda do zero a proteger sua rede local com Linux! Configure o compartilhamento de internet com dnsmasq e firewall de forma prática.
           </p>
           <a href="curso/linux-security.html" class="Botao">Saiba +</a>
         </div>
